--- a/content/posts/AlgorithmLearning/回溯算法-一次搞懂.md
+++ b/content/posts/AlgorithmLearning/回溯算法-一次搞懂.md
@@ -1,19 +1,20 @@
 ---
-title: "回溯算法-一次搞懂"
-date: 2025-09-25
-aliases: ["/Algorithm Learning"]
-tags: ["BackTracking"]
-categories: ["Algorithm Learning"]
-author: "Kurong"
+title: 回溯算法-一次搞懂
+date: "2025-09-25"
+aliases:
+  - /Algorithm Learning
+tags:
+  - BackTracking
+categories:
+  - Algorithm Learning
+author: Kurong
 showToc: true
 TocOpen: true
 draft: false
 hidemeta: false
 comments: false
-description: ""
-disableHLJS: false # to disable highlightjs
-disableShare: true
 disableHLJS: false
+disableShare: true
 hideSummary: false
 searchHidden: false
 ShowBreadCrumbs: true
